# n0conflict

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
n0conflict/: __main__.py  conflict.py  git.py  main.py  resolver.py
tests/: test_conflict.py  test_resolver.py
