[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n0conflict"
version = "0.1.4"
description = "AI-powered Git merge conflict resolver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["git", "merge", "conflict", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer[all]>=0.12.0",
    "anthropic>=0.25.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
n0conflict = "n0conflict.main:main"

[project.urls]
Homepage = "https://github.com/nicolasjkennedy/n0conflict"
Repository = "https://github.com/nicolasjkennedy/n0conflict"
Issues = "https://github.com/nicolasjkennedy/n0conflict/issues"

[tool.hatch.version]
path = "n0conflict/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
